[project]
name = "biomamba2-training"
version = "0.1.0"
description = "Mamba2 Domain Post-Training on PubMed-MEDLINE"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Core dependencies for Mamba2 training
    "torch>=2.0.0",
    "transformers==4.44.2",  # Fixed for compatibility
    "datasets>=2.14.0",
    "mamba-ssm>=2.0.0",
    
    # Training utilities
    "tensorboard>=2.14.0",
    "tqdm>=4.65.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # HuggingFace ecosystem
    "huggingface-hub>=0.23.0",
    "tokenizers>=0.19.0,<0.20.0",
]

[project.optional-dependencies]
# Optional but recommended for advanced features
recommended = [
    "accelerate>=0.24.0",
    "wandb>=0.15.0",
    "triton>=2.0.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
